deployments/simple-deployment/overlays/v4/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: faulty-service-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
    - default-gateway
  http:
  - match:
    - uri:
        prefix: "/abort"
      ignoreUriCase: true
    fault:
      abort:
       httpStatus: 500
       percentage:
         value: 25
    headers:
      request:
          add:
              Fault: "ABORT"
    route:
    - destination:
        host: svc-echo-server-v4 # service name!
        subset: v4
